<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B6E70">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="349dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:src="@drawable/logo2" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/start"
        android:textFontWeight="1000"
        android:textSize="30sp"
        android:background="@drawable/styles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/scores"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/scores"
        android:textFontWeight="1000"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="390dp"
        android:background="@drawable/styles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/exit"
        android:textFontWeight="1000"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="468dp"
        android:background="@drawable/styles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"/>

</androidx.constraintlayout.widget.ConstraintLayout>